rows overlapping fixed + aligned vertically the user dashboard

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -186,33 +186,70 @@ main {
             }
         }
     }
+
     // Desktop styles
     @media screen and (min-width: 768px) {
+        display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        align-items: stretch;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        height: 100vh;
+        margin: 0rem auto;
+
+        main {
+            width: 100%;
+            min-height: auto;
+            margin: auto;
+        }
 
         .card-user-card {
-            width: 20%; // Adjust based on your design needs
-            margin-right: 2rem;
             display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            min-height: 100%; // Ensures it takes up the full height of the container
+            justify-content: space-around;
+            height: 68%;
+            width: 25%;
+            margin-right: 3rem;
+            padding: 0;
+
+            .user-info {
+                display: flex;
+                flex-direction: column;
+
+                img {
+                    height: 30%;
+                }
+            }
+
+            nav {
+                display: flex;
+                align-content: space-around !important;
+                margin: 0;
+                padding: 1rem !important;
+                height: 100%;
+
+                #timeline {
+                    display: flex;
+                    flex-direction: column !important;
+                    padding: 1rem;
+                }
+            }
         }
 
         #cards-container {
-            width: 75%;
             display: grid;
-            grid-template-columns: repeat(3, 1fr); // Three cards per row
-            grid-auto-rows: minmax(200px, auto); // Increased min height to ensure enough space
-            gap: 2rem; // Adjust the spacing between cards
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, auto);
+            gap: 2rem;
+            width: 75%;
         }
 
         .time-card {
-            height: auto;
-            margin-bottom: 0; // Remove bottom margin in grid layout
+            min-height: 300px;
+
+            .time-info {
+                display: flex;
+                flex-direction: column;
+            }
         }
     }
 }
-
